test/conformance/chainsaw/validating-policies/context/configmap/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: policy-cm
data:
  env: prod
