test/conformance/chainsaw/validating-policies/context/configmap/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: ValidatingPolicy
metadata:
  name: check-deployment-labels
spec:
  matchConstraints:
    resourceRules:
    - apiGroups:   [apps]
      apiVersions: [v1]
      operations:  [CREATE, UPDATE]
      resources:   [deployments]
  variables:
    - name: cm
      expression: >-
        resource.get("v1", "configmaps", object.metadata.namespace, "policy-cm")
    - name: environment
      expression: >-
        has(object.metadata.labels) && 'env' in object.metadata.labels && object.metadata.labels['env'] == variables.cm.data.env
  validations:
    - expression: >-
        variables.environment == true
      message: >-
        Deployment labels must be env=prod
